core/parser/x_proofParser.ts
// Generated from x_proof.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import x_proofVisitor from "./x_proofVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class x_proofParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly IDENTIFIER = 19;
	public static readonly Whitespace = 20;
	public static readonly Newline = 21;
	public static readonly BlockComment = 22;
	public static readonly LineComment = 23;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_parameters = 0;
	public static readonly RULE_object = 1;
	public static readonly RULE_application = 2;
	public static readonly RULE_objects = 3;
	public static readonly RULE_aliasBody = 4;
	public static readonly RULE_alias = 5;
	public static readonly RULE_standalonePatternMatchingBody = 6;
	public static readonly RULE_standalonePatternMatching = 7;
	public static readonly RULE_multiplePatternMatchingBody = 8;
	public static readonly RULE_multiplePatternMatching = 9;
	public static readonly RULE_patternMatching = 10;
	public static readonly RULE_rule = 11;
	public static readonly RULE_definition = 12;
	public static readonly RULE_definitionClause = 13;
	public static readonly RULE_axiom = 14;
	public static readonly RULE_axiomClause = 15;
	public static readonly RULE_theorem = 16;
	public static readonly RULE_theoremClause = 17;
	public static readonly RULE_clause = 18;
	public static readonly RULE_x_proof = 19;
	public static readonly literalNames: (string | null)[] = [ null, "','", 
                                                            "'('", "')'", 
                                                            "'='", "'alias'", 
                                                            "';'", "'match'", 
                                                            "'default'", 
                                                            "'=>'", "'{'", 
                                                            "'}'", "'conform'", 
                                                            "'define'", 
                                                            "'premise'", 
                                                            "'conclusion'", 
                                                            "'axiom'", "'proof'", 
                                                            "'theorem'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "IDENTIFIER", 
                                                             "Whitespace", 
                                                             "Newline", 
                                                             "BlockComment", 
                                                             "LineComment" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parameters", "object", "application", "objects", "aliasBody", "alias", 
		"standalonePatternMatchingBody", "standalonePatternMatching", "multiplePatternMatchingBody", 
		"multiplePatternMatching", "patternMatching", "rule", "definition", "definitionClause", 
		"axiom", "axiomClause", "theorem", "theoremClause", "clause", "x_proof",
	];
	public get grammarFileName(): string { return "x_proof.g4"; }
	public get literalNames(): (string | null)[] { return x_proofParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return x_proofParser.symbolicNames; }
	public get ruleNames(): string[] { return x_proofParser.ruleNames; }
	public get serializedATN(): number[] { return x_proofParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, x_proofParser._ATN, x_proofParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let localctx: ParametersContext = new ParametersContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, x_proofParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 40;
			this.match(x_proofParser.IDENTIFIER);
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 41;
				this.match(x_proofParser.T__0);
				this.state = 42;
				this.match(x_proofParser.IDENTIFIER);
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public object(): ObjectContext {
		let localctx: ObjectContext = new ObjectContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, x_proofParser.RULE_object);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 48;
			this.match(x_proofParser.IDENTIFIER);
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===2) {
				{
				{
				this.state = 49;
				this.application();
				}
				}
				this.state = 54;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public application(): ApplicationContext {
		let localctx: ApplicationContext = new ApplicationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, x_proofParser.RULE_application);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 55;
			this.match(x_proofParser.T__1);
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19) {
				{
				this.state = 56;
				this.objects();
				}
			}

			this.state = 59;
			this.match(x_proofParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public objects(): ObjectsContext {
		let localctx: ObjectsContext = new ObjectsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, x_proofParser.RULE_objects);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 61;
			this.object();
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 62;
				this.match(x_proofParser.T__0);
				this.state = 63;
				this.object();
				}
				}
				this.state = 68;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public aliasBody(): AliasBodyContext {
		let localctx: AliasBodyContext = new AliasBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, x_proofParser.RULE_aliasBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this.match(x_proofParser.IDENTIFIER);
			this.state = 70;
			this.match(x_proofParser.T__3);
			this.state = 71;
			this.object();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public alias(): AliasContext {
		let localctx: AliasContext = new AliasContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, x_proofParser.RULE_alias);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this.match(x_proofParser.T__4);
			this.state = 74;
			this.aliasBody();
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 75;
				this.match(x_proofParser.T__0);
				this.state = 76;
				this.aliasBody();
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 82;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public standalonePatternMatchingBody(): StandalonePatternMatchingBodyContext {
		let localctx: StandalonePatternMatchingBodyContext = new StandalonePatternMatchingBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, x_proofParser.RULE_standalonePatternMatchingBody);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.object();
			this.state = 85;
			this.match(x_proofParser.T__3);
			this.state = 86;
			this.object();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public standalonePatternMatching(): StandalonePatternMatchingContext {
		let localctx: StandalonePatternMatchingContext = new StandalonePatternMatchingContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, x_proofParser.RULE_standalonePatternMatching);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(x_proofParser.T__6);
			this.state = 89;
			this.standalonePatternMatchingBody();
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 90;
				this.match(x_proofParser.T__0);
				this.state = 91;
				this.standalonePatternMatching();
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 97;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public multiplePatternMatchingBody(): MultiplePatternMatchingBodyContext {
		let localctx: MultiplePatternMatchingBodyContext = new MultiplePatternMatchingBodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, x_proofParser.RULE_multiplePatternMatchingBody);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 19:
				{
				this.state = 99;
				this.object();
				}
				break;
			case 8:
				{
				this.state = 100;
				this.match(x_proofParser.T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 103;
			this.match(x_proofParser.T__8);
			this.state = 104;
			this.match(x_proofParser.T__9);
			this.state = 108;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
				{
				{
				this.state = 105;
				this.rule();
				}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 111;
			this.match(x_proofParser.T__10);
			this.state = 112;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public multiplePatternMatching(): MultiplePatternMatchingContext {
		let localctx: MultiplePatternMatchingContext = new MultiplePatternMatchingContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, x_proofParser.RULE_multiplePatternMatching);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this.match(x_proofParser.T__6);
			this.state = 115;
			this.match(x_proofParser.T__1);
			this.state = 116;
			this.object();
			this.state = 117;
			this.match(x_proofParser.T__2);
			this.state = 118;
			this.match(x_proofParser.T__9);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8 || _la===19) {
				{
				{
				this.state = 119;
				this.multiplePatternMatchingBody();
				}
				}
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 125;
			this.match(x_proofParser.T__10);
			this.state = 126;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public patternMatching(): PatternMatchingContext {
		let localctx: PatternMatchingContext = new PatternMatchingContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, x_proofParser.RULE_patternMatching);
		try {
			this.state = 130;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 128;
				this.standalonePatternMatching();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 129;
				this.multiplePatternMatching();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public rule(): RuleContext {
		let localctx: RuleContext = new RuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, x_proofParser.RULE_rule);
		try {
			this.state = 137;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 19:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 132;
				this.object();
				this.state = 133;
				this.match(x_proofParser.T__5);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 135;
				this.patternMatching();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 136;
				this.alias();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public definition(): DefinitionContext {
		let localctx: DefinitionContext = new DefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, x_proofParser.RULE_definition);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 139;
			this.match(x_proofParser.IDENTIFIER);
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===2) {
				{
				this.state = 140;
				this.match(x_proofParser.T__1);
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===19) {
					{
					this.state = 141;
					this.parameters();
					}
				}

				this.state = 144;
				this.match(x_proofParser.T__2);
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12) {
					{
					this.state = 145;
					this.match(x_proofParser.T__11);
					this.state = 146;
					this.match(x_proofParser.T__9);
					this.state = 150;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
						{
						{
						this.state = 147;
						this.rule();
						}
						}
						this.state = 152;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 153;
					this.match(x_proofParser.T__10);
					}
				}

				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public definitionClause(): DefinitionClauseContext {
		let localctx: DefinitionClauseContext = new DefinitionClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, x_proofParser.RULE_definitionClause);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 158;
			this.match(x_proofParser.T__12);
			this.state = 159;
			this.definition();
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 160;
				this.match(x_proofParser.T__0);
				this.state = 161;
				this.definition();
				}
				}
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 167;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public axiom(): AxiomContext {
		let localctx: AxiomContext = new AxiomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, x_proofParser.RULE_axiom);
		let _la: number;
		try {
			this.state = 196;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 169;
				this.object();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 170;
				this.match(x_proofParser.IDENTIFIER);
				this.state = 171;
				this.match(x_proofParser.T__1);
				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===19) {
					{
					this.state = 172;
					this.parameters();
					}
				}

				this.state = 175;
				this.match(x_proofParser.T__2);
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 176;
					this.match(x_proofParser.T__13);
					this.state = 177;
					this.match(x_proofParser.T__9);
					this.state = 181;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
						{
						{
						this.state = 178;
						this.rule();
						}
						}
						this.state = 183;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 184;
					this.match(x_proofParser.T__10);
					}
				}

				{
				this.state = 187;
				this.match(x_proofParser.T__14);
				this.state = 188;
				this.match(x_proofParser.T__9);
				this.state = 192;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
					{
					{
					this.state = 189;
					this.rule();
					}
					}
					this.state = 194;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 195;
				this.match(x_proofParser.T__10);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public axiomClause(): AxiomClauseContext {
		let localctx: AxiomClauseContext = new AxiomClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, x_proofParser.RULE_axiomClause);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 198;
			this.match(x_proofParser.T__15);
			this.state = 199;
			this.axiom();
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 200;
				this.match(x_proofParser.T__0);
				this.state = 201;
				this.axiom();
				}
				}
				this.state = 206;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 207;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public theorem(): TheoremContext {
		let localctx: TheoremContext = new TheoremContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, x_proofParser.RULE_theorem);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 209;
			this.match(x_proofParser.IDENTIFIER);
			this.state = 210;
			this.match(x_proofParser.T__1);
			this.state = 212;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19) {
				{
				this.state = 211;
				this.parameters();
				}
			}

			this.state = 214;
			this.match(x_proofParser.T__2);
			this.state = 224;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===14) {
				{
				this.state = 215;
				this.match(x_proofParser.T__13);
				this.state = 216;
				this.match(x_proofParser.T__9);
				this.state = 220;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
					{
					{
					this.state = 217;
					this.rule();
					}
					}
					this.state = 222;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 223;
				this.match(x_proofParser.T__10);
				}
			}

			this.state = 226;
			this.match(x_proofParser.T__14);
			this.state = 227;
			this.match(x_proofParser.T__9);
			this.state = 231;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
				{
				{
				this.state = 228;
				this.rule();
				}
				}
				this.state = 233;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 234;
			this.match(x_proofParser.T__10);
			this.state = 235;
			this.match(x_proofParser.T__16);
			this.state = 236;
			this.match(x_proofParser.T__9);
			this.state = 240;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 524448) !== 0)) {
				{
				{
				this.state = 237;
				this.rule();
				}
				}
				this.state = 242;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 243;
			this.match(x_proofParser.T__10);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public theoremClause(): TheoremClauseContext {
		let localctx: TheoremClauseContext = new TheoremClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, x_proofParser.RULE_theoremClause);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 245;
			this.match(x_proofParser.T__17);
			this.state = 246;
			this.theorem();
			this.state = 251;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 247;
				this.match(x_proofParser.T__0);
				this.state = 248;
				this.theorem();
				}
				}
				this.state = 253;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 254;
			this.match(x_proofParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public clause(): ClauseContext {
		let localctx: ClauseContext = new ClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, x_proofParser.RULE_clause);
		try {
			this.state = 259;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 13:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 256;
				this.definitionClause();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 257;
				this.axiomClause();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 258;
				this.theoremClause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public x_proof(): X_proofContext {
		let localctx: X_proofContext = new X_proofContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, x_proofParser.RULE_x_proof);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 262;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 261;
				this.clause();
				}
				}
				this.state = 264;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 335872) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!x_proofParser.__ATN) {
			x_proofParser.__ATN = new ATNDeserializer().deserialize(x_proofParser._serializedATN);
		}

		return x_proofParser.__ATN;
	}


	static DecisionsToDFA = x_proofParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ParametersContext extends ParserRuleContext {
	constructor(parser?: x_proofParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER_list(): TerminalNode[] {
	    	return this.getTokens(x_proofParser.IDENTIFIER);
	}
	public IDENTIFIER(i: number): TerminalNode {
		return this.getToken(x_proofParser.IDENTIFIER, i);
	}
    public get ruleIndex(): number {
    	return x_proofParser.RULE_parameters;
	}
	// @Override
	public accept<Result>(visitor: x_proofVisitor<Result>): Result {
		if (visitor.visitParameters) {
			return visitor.visitParameters(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ObjectContext extends ParserRuleContext {
	constructor(parser?: x_proofParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(x_proofParser.IDENTIFIER, 0);
	}
	public application_list(): ApplicationContext[] {
		return this.getTypedRuleContexts(ApplicationContext) as ApplicationContext[];
	}
	public application(i: number): ApplicationContext {
		return this.getTypedRuleContext(ApplicationContext, i) as ApplicationContext;
	}
    public get ruleIndex(): number {
    	return x_proofParser.RULE_object;
	}
	// @Override
	public accept<Result>(visitor: x_proofVisitor<Result>): Result {
		if (visitor.visitObject) {
			return visitor.visitObject(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ApplicationContext extends ParserRuleContext {
	constructor(parser?: x_proofParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public objects(): ObjectsContext {
		return this.getTypedRuleContext(ObjectsContext, 0) as ObjectsContext;
	}
    public get ruleIndex(): number {
    	return x_proofParser.RULE_application;
	}
	// @Override
	public accept<Result>(visitor: x_proofVisitor<Result>): Result {
		if (visitor.visitApplication) {
			return visitor.visitApplication(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

